# RoninKB

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  RELEASING.md  THIRD_PARTY_NOTICES.md  install.ps1  install.sh
.github/workflows/: README.md  ci.yml  release.yml
Formula/: roninkb.rb
apps/hhkb-app/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
apps/hhkb-app/src/: App.tsx  main.tsx  theme.ts
apps/hhkb-app/src/components/: BindingsPanel.tsx  BluetoothPanel.tsx  ConnectButton.tsx  DaemonBanner.tsx  DeviceStatusPanel.tsx  DipSwitchDisplay.tsx  EmptyState.tsx  EventLog.tsx  Header.tsx  KeyBindingModal.tsx  KeyDetailPanel.tsx  KeyboardSvg.tsx  KeycodePicker.tsx  LayerOriginLabel.tsx  MacroPanel.tsx  NewProfileDialog.tsx  ProfileImportExport.tsx  RoninLogo.tsx  SettingsPanel.tsx  SetupWizard.tsx  SyncBanner.tsx
apps/hhkb-app/src/components/setup/: StepBackend.tsx  StepBrowser.tsx  StepDaemon.tsx  StepFirstProfile.tsx  StepKanata.tsx  StepWelcome.tsx
apps/hhkb-app/src/data/: factoryDefault.ts  hhkbLayout.ts
apps/hhkb-app/src/hhkb/: commands.ts  daemonClient.ts  device.ts  keyBindings.ts  keymap.ts  keymapDiff.ts  layerOrigin.ts  protocol.ts  types.ts  via.ts  webhid.ts
apps/hhkb-app/src/hhkb/__tests__/: commands.test.ts  daemonClient.test.ts  keymap.test.ts  keymapDiff.test.ts  layerOrigin.test.ts  protocol.test.ts  via.test.ts
apps/hhkb-app/src/hooks/: useKeyOrigin.ts
apps/hhkb-app/src/store/: backendStore.ts  bluetoothStore.ts  daemonStore.ts  deviceStore.ts  flowStore.ts  kanataStore.ts  keyboardThemeStore.ts  profileStore.ts  setupStore.ts  uiStore.ts
apps/hhkb-app/src/store/__tests__/: profileStore.test.ts
crates/hhkb-cli/: Cargo.toml
crates/hhkb-cli/src/: commands.rs  format.rs  main.rs
crates/hhkb-core/: Cargo.toml
crates/hhkb-core/src/: command.rs  device.rs  error.rs  keymap.rs  lib.rs  protocol.rs  transport.rs  types.rs  via.rs
crates/hhkb-daemon/: Cargo.toml  build.rs
crates/hhkb-daemon/src/: autostart.rs  ble.rs  config.rs  db.rs  error.rs  flow.rs  kanata.rs  kanata_config.rs  lib.rs  main.rs  state.rs  tray.rs  ui.rs  ws.rs
crates/hhkb-daemon/src/backend/: eeprom.rs  hidutil.rs  kanata.rs  macos_native.rs  mod.rs  registry.rs
crates/hhkb-daemon/src/routes/: backend.rs  bluetooth.rs  device.rs  flow.rs  health.rs  kanata.rs  keymap.rs  mod.rs  profile.rs
crates/hhkb-daemon/tests/: api.rs  embedded_ui.rs  flow.rs
crates/hhkb-macos-native/: Cargo.toml  README.md
crates/hhkb-macos-native/examples/: poc_full.rs  spike_engine.rs  spike_event_tap.rs  spike_iohid_seize.rs
crates/hhkb-macos-native/src/: engine.rs  error.rs  event_tap.rs  inject.rs  iohid_seize.rs  keycode.rs  lib.rs  profile.rs
docs/: m1-killswitch-validation.md  rfc-0001-macos-native-backend.md  rfc-0002-native-app-shell.md  v0.2.0-plan.md  v0.3.0-plan.md
docs/fixtures/: m1-default.json  m1-homerow.json
install/: README.md
install/linux/: 99-roninKB.rules  roninKB-daemon.service
install/macos/: dev.roninKB.daemon.plist
install/windows/: Install-Task.ps1
scripts/: measure-tap-latency.sh
spec/protocol/: daemon-http.md  native-bridge.md  websocket-events.md
