[package]
name = "hhkb-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line tool for HHKB Professional Hybrid keyboard configuration"
license = "MIT"

[[bin]]
name = "hhkb"
path = "src/main.rs"

[dependencies]
hhkb-core = { path = "../hhkb-core", features = ["hidapi-backend"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
