[package]
name = "hhkb-core"
version = "0.1.0"
edition = "2021"
description = "Core library for HHKB keyboard HID communication, keymap manipulation, and profile management"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
hidapi = { version = "2", optional = true }

[features]
default = []
hidapi-backend = ["dep:hidapi"]
