[package]
name = "hhkb-daemon"
version = "0.1.0"
edition = "2021"
description = "RoninKB background daemon: HTTP+WS API for HHKB keyboard control"
license = "MIT"

[[bin]]
name = "hhkb-daemon"
path = "src/main.rs"

[lib]
name = "hhkb_daemon"
path = "src/lib.rs"

[dependencies]
hhkb-core = { path = "../hhkb-core", features = ["hidapi-backend"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
which = "6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
