[package]
name = "hhkb-daemon"
version = "0.1.1"
edition = "2021"
description = "RoninKB background daemon: HTTP+WS API for HHKB keyboard control"
license = "MIT"

[[bin]]
name = "hhkb-daemon"
path = "src/main.rs"

[lib]
name = "hhkb_daemon"
path = "src/lib.rs"

[dependencies]
hhkb-core = { path = "../hhkb-core", features = ["hidapi-backend"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
toml = "0.8"
which = "6"
btleplug = "0.11"
futures = "0.3"
# -- Flow (cross-device clipboard sync) ------------------------------------
mdns-sd = "0.11"
gethostname = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
arboard = { version = "3", optional = true }
# -- System tray (opt-in) --------------------------------------------------
tray-icon = { version = "0.21", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
winit = { version = "0.30", optional = true }
open = { version = "5", optional = true }
# -- Embedded UI (opt-in) --------------------------------------------------
# Bakes the compiled hhkb-app static bundle into the daemon binary so users
# get a single-binary install with a browser UI at /ui.
rust-embed = { version = "8", optional = true, features = ["interpolate-folder-path"] }
mime_guess = { version = "2", optional = true }

[features]
# Enable to poll the system clipboard every ~1s and feed changes into Flow.
# Off by default so tests and headless builds don't link a GUI dep.
clipboard = ["dep:arboard"]
# Enable to show a system-tray icon (with a quit menu item) when the daemon
# runs interactively. macOS/Windows require the main thread to drive a
# Cocoa/Win32 event loop; the Linux path uses GTK under the hood. See
# `src/tray.rs` and `src/main.rs` for the runtime caveats.
tray = ["dep:tray-icon", "dep:image", "dep:winit", "dep:open"]
# Embed the hhkb-app React frontend from `apps/hhkb-app/dist` directly into
# the binary. The frontend MUST be built (`npm run build`) before `cargo build`
# runs; `build.rs` enforces this at compile time.
embedded-ui = ["dep:rust-embed", "dep:mime_guess"]
# Bundle a pre-built kanata binary inside the daemon so users don't need a
# separate kanata install. build.rs downloads the appropriate GitHub release
# asset at compile time; set KANATA_VERSION env var to override (default v1.11.0).
bundled-kanata = []

[target.'cfg(target_os = "macos")'.dependencies]
# v0.2.0 macOS native backend (RFC 0001). Off the default routing path in M0 —
# the trait wrapper exists in `src/backend/macos_native.rs` for forward
# compatibility, but the daemon still routes through kanata. Wired in fully
# by M4.
hhkb-macos-native = { path = "../hhkb-macos-native" }
core-foundation = "0.10"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
# Used by the bundled-kanata feature to extract the kanata binary from a
# downloaded GitHub release zip at compile time.
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
